# SISPARP1

./: CMakeLists.txt  main.cpp  readme.md  run.sh  run16.sh  run2.sh  run4.sh  run8.sh
files/000 - Cesga/curso051/: .pingPongEu.c.swn  .pingPongEu.c.swo  .pingPongEu.c.swp  README.md
files/000 - Cesga/curso052/: hello_mpi  hello_mpi.c  script  slurm-193249.out  slurm-193272.out  slurm-193288.out  slurm-193296.out  slurm-193300.out  slurm-193301.out  slurm-193313.out  slurm-193338.out
files/000 - Cesga/curso054/: enviar_trabajo.sh  hello  hello_world.c  intel_pingpong.sh  pingpong.c  pingpong.out  pingpong.sh  printf  printf.c  printf.out  sendrecv.c  sendrecv.out  sendrecv.sh
files/000 - Cesga/curso055/: .gitconfig
files/000 - Cesga/curso057/: AllToAll.c  Alltoall  Alltoall.out  Alltoall16.out  Alltoall8.out  BCast.c  Barrier  Barrier.c  Barrier.out  Barrier16.out  Barrier8.out  Bcast  Bcast16.out  Bcast4.out  Bcast8.out  Gather  Gather.c  Gather.out  Gather16.out  Gather8.out  PingPon  PingPong  PingPong.c  PingPong.out  Reduce  Reduce.c  Reduce.out  Reduce16.out  Reduce8.out  Scatter  Scatter.c  Scatter.out  Scatter16.out  Scatter8.out  SendRecv  SendRecv.c  SendRecv4.out  (+3 more)
results/: res16.txt  res2.txt  res4.txt  res8.txt
src/: launcher.sh  main.c  main.cpp  makefile  pingpong.c
src/Benchmarks/: all_benchmarks.h  alltoall.c  alltoall.h  barrier.c  barrier.h  bcast.c  bcast.h  common.h  gather.c  gather.h  pingpong.c  pingpong.h  reduce.c  reduce.h  scatter.c  scatter.h  sendrecv.c  sendrecv.h
src/asdf/: asdf.cpp  asdf.h
trash/: main.bak2  makefile.save
(+355 files in other folders)
